# solana-smart-contract

./: .gitignore  .prettierignore  1.txt  Anchor.toml  LICENSE  README.md  package.json  rustfmt.toml  tsconfig.json
.github/workflows/: main.yml
app/actions/setup/: action.yml
clients/js/: .eslintrc.cjs  .prettierrc.json  README.md  package.json  tsconfig.declarations.json  tsconfig.json  tsup.config.ts
clients/js/src/: index.ts
clients/js/test/: _setup.ts  create.test.ts  increment.test.ts
clients/rust/: Cargo.toml  README.md
clients/rust/src/: lib.rs
clients/rust/tests/: create.rs
idl/: solana_smart_contract.json
migrations/: deploy.ts
program/: Cargo.toml  README.md  idl.json  keypair.json
program/src/: lib.rs  voting.rs
programs/solana-smart-contract/: Cargo.toml  Xargo.toml
programs/solana-smart-contract/src/: lib.rs
scripts/: check-solana-version.mjs  generate-clients.mjs  generate-idls.mjs  link-solana-version.mjs  start-validator.mjs  stop-validator.mjs  utils.mjs
scripts/ci/: set-env.mjs
scripts/client/: format-js.mjs  lint-js.mjs  lint-rust.mjs  publish-js.mjs  publish-rust.mjs
scripts/program/: build.mjs  clean.mjs  dump.mjs  format.mjs  lint.mjs  test.mjs
tests/: solana-smart-contract.ts
