[package]
name = "solana-smart-contract"
version = "0.0.0"
edition = "2021"
readme = "./README.md"
license-file = "../LICENSE"
publish = false

[package.metadata.solana]
program-id = "Gp9vmpxGaRiPky2bGEtaGHsiJps7PpxxiZZoXQWCGSNv"
program-dependencies = []
account-dependencies = []

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.28.0"
solana-program = "~2.0"
